--- a/package.json
+++ b/package.json
@@ -42,10 +42,11 @@
     ]
   },
   "devDependencies": {
-    "cz-conventional-changelog": "^3.3.0",
-    "typescript": "^4.3.5",
     "@types/react": "^17.0.17",
-    "@types/react-dom": "^17.0.9"
+    "@types/react-dom": "^17.0.9",
+    "cz-conventional-changelog": "^3.3.0",
+    "jest-transform-stub": "^2.0.0",
+    "typescript": "^4.3.5"
   },
   "config": {
     "commitizen": {
