--- a/package.json
+++ b/package.json
@@ -42,11 +42,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^17.0.17",
-    "@types/react-dom": "^17.0.9",
     "cz-conventional-changelog": "^3.3.0",
-    "jest-transform-stub": "^2.0.0",
-    "typescript": "^4.3.5"
+    "jest-transform-stub": "^2.0.0"
   },
   "config": {
     "commitizen": {
