--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-input-mask": "^2.0.4",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
+    "redux-actions": "^2.6.5",
+    "regenerator-runtime": "^0.13.9",
     "sass-loader": "^12.1.0",
     "web-vitals": "^1.1.2"
   },
@@ -45,10 +50,19 @@
   },
   "devDependencies": {
     "@testing-library/react-hooks": "^7.0.1",
+    "axios": "^0.21.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "cz-conventional-changelog": "^3.3.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
+    "history": "^5.0.1",
     "jest-transform-stub": "^2.0.0",
+    "loft-taxi-mui-theme": "^1.2.0",
+    "react-router-dom": "^5.2.1",
     "react-test-renderer": "^17.0.2"
   },
   "config": {
