--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-actions": "^2.6.5",
+    "redux-mock-store": "^1.5.4",
     "regenerator-runtime": "^0.13.9",
     "sass-loader": "^12.1.0",
     "web-vitals": "^1.1.2"
