--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "regenerator-runtime": "^0.13.9",
     "sass-loader": "^12.1.0",
     "styled-components": "^5.3.1",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "redux-saga": "^1.1.3",
+    "react-router-dom": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -66,7 +68,7 @@
     "history": "^5.0.1",
     "jest-transform-stub": "^2.0.0",
     "loft-taxi-mui-theme": "^1.2.0",
-    "react-router-dom": "^5.2.1",
+    "react-select": "^4.3.1",
     "react-test-renderer": "^17.0.2"
   },
   "config": {
