--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "history": "^5.0.1",
+    "husky": "^7.0.2",
     "jest-transform-stub": "^2.0.0",
     "loft-taxi-mui-theme": "^1.2.0",
     "react-select": "^4.3.1",
@@ -74,6 +75,11 @@
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "CI=true jest -o"
     }
   }
 }
