--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest -o",
+    "test": "jest",
     "eject": "react-scripts eject",
     "commit": "cz"
   },
