--- a/package.json
+++ b/package.json
@@ -79,8 +79,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "set CI=true && npm run test",
-      "pre-commit": "echo 'husky pre-commit'"
+      "pre-push": "set CI=true && npm run test"
     }
   }
 }
