--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/classnames": "^2.3.1",
     "@types/styled-components": "^5.1.13",
     "classnames": "^2.3.1",
+    "formik": "^2.2.9",
     "mapbox-gl": "^2.4.1",
     "node-sass": "^6.0.1",
     "prop-types": "^15.7.2",
@@ -18,16 +19,16 @@
     "react-dom": "^17.0.2",
     "react-input-mask": "^2.0.4",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-actions": "^2.6.5",
     "redux-mock-store": "^1.5.4",
+    "redux-saga": "^1.1.3",
     "regenerator-runtime": "^0.13.9",
     "sass-loader": "^12.1.0",
     "styled-components": "^5.3.1",
-    "web-vitals": "^1.1.2",
-    "redux-saga": "^1.1.3",
-    "react-router-dom": "^5.2.1"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
